# edustash

./: .gitignore  README.md  pyproject.toml
src/edu/: datasets.py
src/edu/data/: titanic.csv
src/edu/kit/: __init__.py
src/snax/analyze/: main.py
src/snax/data/: titanic.md
src/snax/kit/: __init__.py
src/snax/ml/models/: base.py
src/snax/ml/models/clustering/: kmeans.py
src/snax/umbd/spd/: README.md  loader.py  main.py  schema.py  spd.ipynb
